roles/headnode/files/firewall.conf
# Generated by iptables-save v1.4.21 on Fri Mar 25 08:46:48 2016
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
# ssh
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 131.204.12.0/24 -i eth1 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
# http
-A INPUT -s 131.204.12.0/24 -i eth1 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# ganglia monitor
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 8649 -j ACCEPT
-A INPUT -i eth0 -p udp -m state --state NEW -m udp --dport 8649 -j ACCEPT
#Slurm cluster
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 6817 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 6818 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 7321 -j ACCEPT
#nfs server
-A INPUT -i eth0 -p udp -m state --state NEW -m udp --dport 111 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 111 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 2049 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 32803 -j ACCEPT
-A INPUT -i eth0 -p udp -m state --state NEW -m udp --dport 32769 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 892 -j ACCEPT
-A INPUT -i eth0 -p udp -m state --state NEW -m udp --dport 892 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 875 -j ACCEPT
-A INPUT -i eth0 -p udp -m state --state NEW -m udp --dport 875 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 662 -j ACCEPT
-A INPUT -i eth0 -p udp -m state --state NEW -m udp --dport 662 -j ACCEPT
-A FORWARD -i eth1 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o eth1 -j ACCEPT
-A OUTPUT -o eth1 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
COMMIT
# Completed on Fri Mar 25 08:46:48 2016
# Generated by iptables-save v1.4.21 on Fri Mar 25 08:46:48 2016
*nat
:PREROUTING ACCEPT [6437:436768]
:INPUT ACCEPT [16:720]
:OUTPUT ACCEPT [336:42856]
:POSTROUTING ACCEPT [234:35417]
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed on Fri Mar 25 08:46:48 2016
